# django-migrate

./: .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
hook/: django_migrate.sh
hooks/: django_migrate.py
