[metadata]
name = hooks
version = 0.0.1
description = Checks for missing django migrations
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    django-migrate = hooks.django_migrate:main

[bdist_wheel]
universal = True